# infrahub-backup

./: .dockerignore  .gitignore  .markdownlint.yaml  .vale.ini  .yamllint.yml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  backup.go  flake.nix  go.mod  go.sum  infrahub.go  main.go  pyproject.toml  tasks.py  utils.go
.github/: CODEOWNERS  build-docs.sh  dependabot.yml  file-filters.yml  labeler.yml  labels.yml
.github/workflows/: ci.yml  release.yml  sync-docs.yml
.vale/styles/: spelling-exceptions.txt
.vale/styles/Infrahub/: sentence-case.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
docs/docs/: readme.mdx
docs/docs/guides/: backup-instance.mdx  install.mdx  installation.mdx  kubernetes-backup.mdx  kubernetes-restore.mdx  restore-backup.mdx  self-update.mdx
docs/docs/reference/: commands.mdx  configuration.mdx  helm-values.mdx
docs/docs/references/: commands.mdx
docs/docs/topics/: backup-strategies.mdx  deployment-environments.mdx
docs/docs/tutorials/: getting-started.mdx
scripts/: clean_old_tasks.py  update-vendor-hash.sh
specs/001-k8s-helm-backup/: plan.md  spec.md  tasks.md
specs/001-k8s-helm-backup/checklists/: requirements.md
specs/001-self-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-self-update/checklists/: requirements.md
specs/001-self-update/contracts/: release-artifacts.md  update-cli.md
specs/002-plakar-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-plakar-integration/checklists/: requirements.md
specs/002-plakar-integration/contracts/: cli-interface.md
src/: backup.go  environment.go  infrahub.go  main.go  taskmanager.go
src/cmd/infrahub-backup/: main.go
src/cmd/infrahub-environment/: main.go
src/cmd/infrahub-taskmanager/: main.go
src/internal/app/: app.go  (+32 more)
src/scripts/: get_running_tasks.py
tests/: conftest.py
tests/e2e/: conftest.py  test_docker_plakar.py  test_docker_plakar_s3.py  test_docker_s3.py  test_docker_tarball.py  test_k8s_plakar.py  test_k8s_plakar_s3.py  test_k8s_s3.py  test_k8s_tarball.py
tests/helpers/: utils.py
tools/neo4jwatchdog/: main.go
tools/s3-uploader/: main.go
(+24 files in other folders)
