[project]
name = "infrahub-backup-e2e"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "kubernetes-asyncio>=33.0",
    "kr8s>=0.20",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "infrahub-sdk[all]>=1.0",
    "boto3>=1.35",
    "testcontainers>=4.14",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests",
    "docker: tests requiring Docker Compose Infrahub deployment",
    "k8s: tests requiring Kubernetes (vcluster) Infrahub deployment",
]
