[project]
name = "infrahub-backup-e2e"
version = "0.1.0"
description = "End-to-end test suite for the infrahub-backup CLI tooling"
authors = [{ name = "OpsMill", email = "info@opsmill.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9",
    "pytest-asyncio>=0.25",
    "kubernetes-asyncio>=33.0",
    "kr8s>=0.20",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "infrahub-sdk[all]>=1.0",
    "boto3>=1.35",
    "infrahub-testcontainers>=1.8",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "yamllint",
    "rumdl",
    "invoke",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests",
    "docker: tests requiring Docker Compose Infrahub deployment",
    "k8s: tests requiring Kubernetes (vcluster) Infrahub deployment",
]

[tool.ruff]
line-length = 120
exclude = [".venv", "bin", "docs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
pretty = true
ignore_missing_imports = true

[tool.rumdl]
# MD013 line-length (prose wraps naturally), MD033 inline HTML (MDX components),
# MD041 first-line heading (files use frontmatter), MD029 ordered-list prefix
# (manual numbering), MD060 table column style (flexible alignment).
disable = ["MD013", "MD033", "MD041", "MD029", "MD060"]
exclude = ["node_modules", "docs/node_modules", "specs", ".specify", ".claude"]
